--- a/APP/CRUD-GENERATOR/gs-starter/src/index.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/index.html
@@ -3,26 +3,27 @@
 <head>
   <meta charset="utf-8">
   <title>GsStarter</title>
-  
- 
+
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
-  
+
   <!-- Theme -->
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="./assets/css/paper-dashboard.css" rel="stylesheet"/>
-  
-  
+  <link href="./assets/css/tables.scss" rel="stylesheet"/>
 
-  
+  <link href="./assets/css/demo.css" rel="stylesheet"/>
+
+
   <link
     href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Muli:400,300'
-    rel='stylesheet' type='text/css'>
+        rel='stylesheet' type='text/css'>
   <link href="./assets/css/themify-icons.css" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -41,13 +42,13 @@
 
 </head>
 <body>
-   
-  <app-root>
-    
-    <div class="loader-container">
-        <div class="loader"></div>
-      </div>
-    
-    </app-root>
+
+<app-root>
+
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
+
+</app-root>
 </body>
 </html>
