--- a/APP/CRUD-GENERATOR/gs-starter/platforms/android/app/src/main/assets/www/index.html
+++ b/APP/CRUD-GENERATOR/gs-starter/platforms/android/app/src/main/assets/www/index.html
@@ -40,7 +40,7 @@
 
 
 
-<link rel="stylesheet" href="styles.1484c650a8a63d39c895.css"></head>
+</head>
 <body>
 
 <app-root>
@@ -50,5 +50,5 @@
   </div>
 
 </app-root>
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.09e2bba2ab7376db56b8.js" nomodule defer></script><script src="polyfills.b948c5521048b3f55fad.js" defer></script><script src="main.1241d7f857ec1437d527.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
