--- a/APP/CRUD-GENERATOR/gs-starter/www/index.html
+++ b/APP/CRUD-GENERATOR/gs-starter/www/index.html
@@ -5,7 +5,7 @@
   <title>GsStarter</title>
 
 
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -50,5 +50,5 @@
   </div>
 
 </app-root>
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.09e2bba2ab7376db56b8.js" nomodule defer></script><script src="polyfills.b948c5521048b3f55fad.js" defer></script><script src="main.ea409ad636db8f7cb971.js" defer></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.09e2bba2ab7376db56b8.js" nomodule defer></script><script src="polyfills.b948c5521048b3f55fad.js" defer></script><script src="main.480c5c26d8e566618a0d.js" defer></script></body>
 </html>
